Add JS examples

--- a/bloque_1/html/html_ejer1/index.html
+++ b/bloque_1/html/html_ejer1/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Ejercicio 1</title>
+        <meta charset="utf-8">
     </head>
     <body>
         <section>
@@ -29,7 +30,7 @@
             </table>
         </section>
         <section>
-            <h1>Animales</h1>
+            <h1 style="color: rgba(0,21,98,0.1)">Animales</h1>
             <section>
                 <h2>Gatos</h2>
                 <a href="https://www.google.es/search?q=gato">Más información</a>
