--- a/bloque_1/js/Ejemplo8/index.html
+++ b/bloque_1/js/Ejemplo8/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <title>Ejemplo 8</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
 </head>
 
