--- a/bloque_1/js/Ejemplo3/index.html
+++ b/bloque_1/js/Ejemplo3/index.html
@@ -1,5 +1,8 @@
 <html>
-
+<head>
+  <title>Ejemplo 3</title>
+  <meta charset="utf-8">
+</head>
 <body>
   <script src='app.js'></script>
   <button onclick="alerta();">Botón</button>
