--- a/bloque_1/js/Ejemplo4/index.html
+++ b/bloque_1/js/Ejemplo4/index.html
@@ -1,5 +1,10 @@
 <html>
 
+<head>
+    <title>Ejemplo 4</title>
+    <meta charset="utf-8">
+</head>
+
 <body>
     <button onclick="saluda()">Saluda!</button>
     <div id='content'></div>
