--- a/bloque_1/js/Ejemplo5/index.html
+++ b/bloque_1/js/Ejemplo5/index.html
@@ -1,5 +1,10 @@
 <html>
 
+<head>
+    <title>Ejemplo 5</title>
+    <meta charset="utf-8">
+</head>
+
 <body>
     <button>Saluda!</button>
     <div id='content'></div>
