--- a/bloque_1/js/Ejemplo9/index.html
+++ b/bloque_1/js/Ejemplo9/index.html
@@ -1,5 +1,7 @@
 <html>
-
+<head>
+    <title>Ejemplo 9</title>
+    <meta charset="utf-8">
 <body>
     <div id="content"></div>
     <script src='app.js'></script>
