--- a/bloque_1/js/Ejercicio3/index.html
+++ b/bloque_1/js/Ejercicio3/index.html
@@ -1,5 +1,10 @@
 <html>
 
+<head>
+    <title>Ejercicio 3</title>
+    <meta charset="utf-8">
+</head>
+
 <body>
     <button onclick='mostrarOcultar()'>Mostrar/Ocultar</button>
     <div id='content'>Hola Mundo!</div>
