--- a/bloque_1/js/Ejercicio5/index.html
+++ b/bloque_1/js/Ejercicio5/index.html
@@ -1,5 +1,10 @@
 <html>
 
+<head>
+    <title>Ejercicio 5</title>
+    <meta charset="utf-8">
+</head>
+
 <body>
     <div id='content'></div>
     <script src='app.js'></script>
