--- a/bloque_1/js/Ejercicio7/index.html
+++ b/bloque_1/js/Ejercicio7/index.html
@@ -1,11 +1,16 @@
 <html>
 
+<head>
+    <title>Ejercicio 7</title>
+    <meta charset="utf-8">
+</head>
+
 <body>
 
     <h1>Librería FW</h1>
 
     <div id='content'></div>
-    
+
     <script src='app.js'></script>
 </body>
 
